# taller-nlp

./: .gitignore  README.md  pyproject.toml  run.sh
src/: app.py  config.py  model_1.py  model_2.py  train.py
src/models/: transformer_models.py
src/utils/: simple_data_handler.py  text_generator.py
