[project]
name = "taller-nlp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.1.3",
    "streamlit>=1.45.1",
    "tensorflow>=2.19.0",
    "tensorflow-metal>=1.2.0",
    "watchdog>=6.0.0",
]
